[package]
name = "spinlock"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "`no_std` spin lock implementation that can disable kernel local IRQs or preemption while locking"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/spinlock"
documentation = "https://arceos-org.github.io/spinlock"

[features]
# To use in the multi-core environment
smp = []
default = []

[dependencies]
cfg-if = "1.0"
kernel_guard = "0.1"
